# rust-graphql-dynamodb-cdk

./: .dockerignore  Cargo.toml  Dockerfile  README.md  deploy-to-ecr.sh
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: deploy.yml
cdk/: package.json
cdk/lib/: cdk-stack.ts
src/: app_state.rs  coffee_order_type.rs  coffee_type.rs  database.rs  graphql_schema.rs  main.rs
