[package]
name = "coffee-shop-api"
version = "0.1.0"
authors = ["ozer <ozer.cevikaslan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "1.14.0"
async-graphql-warp = "1.14.0"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
http = "0.2"
rusoto_core = "0.44.0"
rusoto_dynamodb = "0.44.0"
rusoto_credential = "0.44.0"
dotenv = "0.15.0"
base64 = "0.12.1"
uuid = "0.8.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"